# civilian

./: .gitignore
api/: Cargo.toml  Dockerfile  publish.sh
api/assets/: Events.json
api/src/: main.rs
api/src/routes/: mod.rs  send_incidents.rs
api/src/structs/: AppState.rs  Event.rs  Incident.rs  mod.rs
api/src/utils/: create_incidents.rs  file_handler.rs  mod.rs
data/: Cargo.toml
data/assets/: LA_1.geojson  LA_2.geojson  events.json
data/src/: main.rs
design/: ResidentData.csv  ResidentData.numbers
docs/: incidents.txt  schema.txt
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.css  App.tsx  main.tsx
web/src/components/: IntroOverlay.tsx  Map.tsx  ReportOverlay.tsx  Store.tsx
web/src/components/map/: CurrentLocation.tsx  IncidentPopup.tsx  Incidents.tsx
web/src/pages/: About.tsx  Home.tsx
web/src/structs/: Incident.tsx
web/src/utils/: Distance.tsx  FormatTime.tsx  GetIncidents.tsx
