[package]
name = "civilian-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
geo = "0.31.0"
geojson = "0.24.2"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
google_maps = "3.8"
dotenvy = "0.15.7"
indicatif = "0.18.1"
axum = "0.8.6"
sqlx = { version = "0.8", features = [ "runtime-tokio" , "postgres"] }
futures-util = "0.3.31"
tower-http = {version = "0.6.6", features = ["cors"]}
futures = "0.3.31"
lazy_static = "1.5.0"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]
