[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
geo = "0.31.0"
geojson = "0.24.2"
google_maps = "3.8"
dotenvy = "0.15.7"
indicatif = "0.18.1"
futures-util = "0.3.31"
rand = "0.9.2"
lazy_static = "1.5.0"
futures = "0.3.31"
sqlx = { version = "0.8", features = [ "runtime-tokio" , "postgres"] }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]
